--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -7,3 +7,136 @@ body {
   font-size: 22px;
   text-align: center;
 }
+
+h2,
+h3,
+h4 {
+  margin: 0;
+  padding: 10px;
+}
+
+a {
+  color: seashell;
+}
+
+.container-flex {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+/* Header Styles */
+header{
+  width: 100%;
+  height: 69px;
+  position: fixed;
+  background-color: black;
+  border-bottom: 1px solid seashell;
+  align-items: center;
+  z-index: 1;
+}
+
+header img {
+  height: 50px;
+  padding-left: 10px;
+}
+
+nav {
+  text-align: right;
+  flex-grow: 1;
+}
+
+nav span {
+  display: inline-block;
+  padding: 20px 10px;
+}
+
+/* Main Content Container Style */
+
+.main-content {
+  padding-top: 69px;
+  opacity: 0.9;
+  width: 1200px;
+  margin: auto;
+}
+
+/* Mission Style */
+
+#mission {
+  height: 700px;
+  padding-top: 70px;
+  background-image: url("../../resources/img/img-mission-background.jpg");
+}
+
+#mission .content {
+  width: 100%;
+  margin: auto;
+  background-color: black;
+}
+
+/* Store Style */
+
+#store {
+  height: 700px;
+  width: 1000px;
+  margin: auto;
+  padding-top: 70px;
+}
+
+.item {
+  padding: 5px;
+}
+
+.item img {
+  height: 200px;
+  margin: 10px;
+  display: block;
+}
+
+.item span {
+  display: block;
+  padding: 5px;
+  font-weight: bold;
+  text-align: center;
+}
+
+/* Location Styling */
+
+#locations .container-flex {
+  margin: auto;
+  width: 1100px;
+}
+
+.container-flex.cls-locations {
+  padding-top: 5px;
+}
+
+#locations {
+  background-image: url("../../resources/img/img-locations-background.jpg");
+  height: 500px;
+  padding-top: 70px;
+}
+
+.location {
+  padding: 10px;
+  margin: 5px 20px;
+  background-color: black;
+  opacity: 1.0;
+  flex-basis: 280px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+/* Contact Styling */
+
+#contact {
+  height: 200px;
+}
+
+/* Footer Styling */
+
+footer {
+  padding-left: 20px;
+  text-align: left;
+
+}
